Fix some deprecation warnings. Use Jinx 2.0.2